feat: complete backend service for activity tracking, security, and export modules